package com.andreeailie.tracker_presentation.groceries_list.add_grocery

data class GroceryTextFieldState(
    val text: String = "",
    val hint: String = "",
    val isHintVisible: Boolean = true
)